--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <ul id="list-name"></ul>
 </fieldset>
 
+<script src="js/ListService.js"></script>
+<script src="js/HTMLService.js"></script>
 <script src="js/ListController.js"></script>
+
 </body>
 </html>
